--- a/src/pages/winner.astro
+++ b/src/pages/winner.astro
@@ -1,17 +1,19 @@
---- 
+---
 import NavBar from "../components/NavBar.astro";
-import Carousel from '../components/Carousel.astro';
+import Carousel from "../components/Carousel.astro";
 import Layout from "../layouts/Layout.astro";
 import Footer from "../components/Footer.astro";
 ---
 
 <Layout title="VeeHac">
-    <NavBar backgroundColor="#827BD2" />
+  <NavBar backgroundColor="#827BD2" />
 
   <!-- Header Section -->
   <header class="header">
     <h1>Hackathon Winning Projects</h1>
-    <p class="title-desc">A compilation of all the wonderful winning projects</p>
+    <p class="title-desc">
+      A compilation of all the wonderful winning projects
+    </p>
   </header>
 
   <!-- Champion Section -->
@@ -23,7 +25,10 @@ import Footer from "../components/Footer.astro";
       </div>
       <div class="winner-description">
         <h2>V001 PathFinder</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. AAAAAAAAAAAAAAAAAAA...</p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          AAAAAAAAAAAAAAAAAAA...
+        </p>
       </div>
     </div>
   </section>
@@ -39,7 +44,10 @@ import Footer from "../components/Footer.astro";
         </div>
         <div class="runner-up-description">
           <h2>V002 SkyRunner</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. AAAAAAAAAAAAAAAAAAA...</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            AAAAAAAAAAAAAAAAAAA...
+          </p>
         </div>
       </div>
     </section>
@@ -53,7 +61,10 @@ import Footer from "../components/Footer.astro";
         </div>
         <div class="runner-up-description">
           <h2>V003 CodeSprint</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. AAAAAAAAAAAAAAAAAAA...</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            AAAAAAAAAAAAAAAAAAA...
+          </p>
         </div>
       </div>
     </section>
@@ -61,7 +72,7 @@ import Footer from "../components/Footer.astro";
 
   <!-- Carousel Section -->
   <Carousel />
-  <Footer/>
+  <Footer />
 </Layout>
 
 <style>
@@ -97,7 +108,7 @@ import Footer from "../components/Footer.astro";
 
   .header .title-desc {
     font-size: 2rem;
-    font-weight: lighter; 
+    font-weight: lighter;
   }
 
   /* Winner Section */
@@ -275,8 +286,6 @@ import Footer from "../components/Footer.astro";
     .runner-up-places {
       width: 80%; /* Limit the width of the container */
     }
-
-    
   }
 
   @media (max-width: 768px) {
