--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -1,210 +1,225 @@
 ---
-import 'swiper/css';
+import "swiper/css";
 ---
+
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=visibility" />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=visibility"
+  />
 </head>
 <body>
-    <div class="container swiper">
-        <div class="card-wrapper">
-            <ul class="card-list swiper-wrapper">
-                <li class="card-item swiper-slide">
-                        <a href="" class="card-link">
-                            <img src="anonymous.jpg" alt="Card Image" class="card-image">
-                             <p class="badge">Developer 1</p>
-                             <h2 class="card-title">AAAAAAAAAAAAAAAAAAAAA</h2>
-                             <button class="card-button material-symbols-rounded">visibility</button>
-                        </a>
-                </li>
-                <li class="card-item swiper-slide">
-                        <a href="" class="card-link">
-                            <img src="anonymous.jpg" alt="Card Image" class="card-image">
-                             <p class="badge">Developer 2</p>
-                             <h2 class="card-title">AAAAAAAAAAAAAAAAAAA</h2>
-                             <button class="card-button material-symbols-rounded">visibility</button>
-                        </a>
-                </li>
-                <li class="card-item swiper-slide">
-                        <a href="" class="card-link">
-                            <img src="anonymous.jpg" alt="Card Image" class="card-image">
-                             <p class="badge">Developer 3</p>
-                             <h2 class="card-title">AAAAAAAAAAAAAAAAAAAAAAAA</h2>
-                             <button class="card-button material-symbols-rounded">visibility</button>
-                        </a>
-                </li>
-                <li class="card-item swiper-slide">
-                        <a href="" class="card-link">
-                            <img src="anonymous.jpg" alt="Card Image" class="card-image">
-                             <p class="badge">Developer 4</p>
-                             <h2 class="card-title">AAAAAAAAAAA</h2>
-                             <button class="card-button material-symbols-rounded">visibility</button>
-                        </a>
-                </li>
-                <li class="card-item swiper-slide">
-                        <a href="" class="card-link">
-                            <img src="anonymous.jpg" alt="Card Image" class="card-image">
-                             <p class="badge">Developer 5</p>
-                             <h2 class="card-title">AAAAAAAAA</h2>
-                             <button class="card-button material-symbols-rounded">visibility</button>
-                        </a>
-                </li>
-                <li class="card-item swiper-slide">
-                        <a href="" class="card-link">
-                            <img src="anonymous.jpg" alt="Card Image" class="card-image">
-                             <p class="badge">Developer 6</p>
-                             <h2 class="card-title">AAAAAAAAA</h2>
-                             <button class="card-button material-symbols-rounded">visibility</button>
-                        </a>
-                </li>
-                <li class="card-item swiper-slide">
-                        <a href="" class="card-link">
-                            <img src="anonymous.jpg" alt="Card Image" class="card-image">
-                             <p class="badge">Developer 7</p>
-                             <h2 class="card-title">AAAAAAAAAAAA</h2>
-                             <button class="card-button material-symbols-rounded">visibility</button>
-                        </a>
-                </li>
-            </ul>
-            <div class="swiper-pagination"></div>
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-        </div>
+  <div class="container swiper">
+    <div class="card-wrapper">
+      <ul class="card-list swiper-wrapper">
+        <li class="card-item swiper-slide">
+          <a href="" class="card-link">
+            <img src="anonymous.jpg" alt="Card Image" class="card-image" />
+            <p class="badge">Developer 1</p>
+            <h2 class="card-title">AAAAAAAAAAAAAAAAAAAAA</h2>
+            <button class="card-button material-symbols-rounded"
+              >visibility</button
+            >
+          </a>
+        </li>
+        <li class="card-item swiper-slide">
+          <a href="" class="card-link">
+            <img src="anonymous.jpg" alt="Card Image" class="card-image" />
+            <p class="badge">Developer 2</p>
+            <h2 class="card-title">AAAAAAAAAAAAAAAAAAA</h2>
+            <button class="card-button material-symbols-rounded"
+              >visibility</button
+            >
+          </a>
+        </li>
+        <li class="card-item swiper-slide">
+          <a href="" class="card-link">
+            <img src="anonymous.jpg" alt="Card Image" class="card-image" />
+            <p class="badge">Developer 3</p>
+            <h2 class="card-title">AAAAAAAAAAAAAAAAAAAAAAAA</h2>
+            <button class="card-button material-symbols-rounded"
+              >visibility</button
+            >
+          </a>
+        </li>
+        <li class="card-item swiper-slide">
+          <a href="" class="card-link">
+            <img src="anonymous.jpg" alt="Card Image" class="card-image" />
+            <p class="badge">Developer 4</p>
+            <h2 class="card-title">AAAAAAAAAAA</h2>
+            <button class="card-button material-symbols-rounded"
+              >visibility</button
+            >
+          </a>
+        </li>
+        <li class="card-item swiper-slide">
+          <a href="" class="card-link">
+            <img src="anonymous.jpg" alt="Card Image" class="card-image" />
+            <p class="badge">Developer 5</p>
+            <h2 class="card-title">AAAAAAAAA</h2>
+            <button class="card-button material-symbols-rounded"
+              >visibility</button
+            >
+          </a>
+        </li>
+        <li class="card-item swiper-slide">
+          <a href="" class="card-link">
+            <img src="anonymous.jpg" alt="Card Image" class="card-image" />
+            <p class="badge">Developer 6</p>
+            <h2 class="card-title">AAAAAAAAA</h2>
+            <button class="card-button material-symbols-rounded"
+              >visibility</button
+            >
+          </a>
+        </li>
+        <li class="card-item swiper-slide">
+          <a href="" class="card-link">
+            <img src="anonymous.jpg" alt="Card Image" class="card-image" />
+            <p class="badge">Developer 7</p>
+            <h2 class="card-title">AAAAAAAAAAAA</h2>
+            <button class="card-button material-symbols-rounded"
+              >visibility</button
+            >
+          </a>
+        </li>
+      </ul>
+      <div class="swiper-pagination"></div>
+      <!-- If we need navigation buttons -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
     </div>
+  </div>
 </body>
 
-
 <style>
-    * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: sans-serif;
-    }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+  }
 
-    .container {
-        padding: 60px 0 60px 0;
-    }
+  .container {
+    padding: 60px 0 60px 0;
+  }
 
-    .card-wrapper {
-        /* max-width: 1100px; */
-        margin: 0 150px 30px;
-        overflow: hidden;
-        padding: 20px 0 20px 0;
-    }
+  .card-wrapper {
+    /* max-width: 1100px; */
+    margin: 0 150px 30px;
+    overflow: hidden;
+    padding: 20px 0 20px 0;
+  }
 
-    .card-list .card-item {
-        list-style: none;
-    }
+  .card-list .card-item {
+    list-style: none;
+  }
 
-    .card-list .card-item .card-link {
-        width: 400px;
-        user-select: none;
-        display: block;
-        padding: 18px;
-        background: #fff;
-        border-radius: 12px;
-        text-decoration: none;
-        border: 2px solid transparent;
-        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
-        transition: 0.4 ease;
-    }
+  .card-list .card-item .card-link {
+    width: 400px;
+    user-select: none;
+    display: block;
+    padding: 18px;
+    background: #fff;
+    border-radius: 12px;
+    text-decoration: none;
+    border: 2px solid transparent;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
+    transition: 0.4 ease;
+  }
 
-    .card-list .card-item .card-link:hover {
-        border-color: #5372f0;
-    }
+  .card-list .card-item .card-link:hover {
+    border-color: #5372f0;
+  }
 
-    .card-list .card-link .card-image {
-        width: 100%;
-        aspect-ratio: 16/9;
-        object-fit: cover;
-        border-radius: 10px;
-    }
+  .card-list .card-link .card-image {
+    width: 100%;
+    aspect-ratio: 16/9;
+    object-fit: cover;
+    border-radius: 10px;
+  }
 
-    .card-list .card-link .badge {
-        padding: 8px 16px;
-        font-size: 0.95rem;
-        font-weight: 500;
-        margin: 16px 0 18px;
-        width: fit-content;
-        border-radius: 50px;
-        background: #DDE4FF;
-    }
+  .card-list .card-link .badge {
+    padding: 8px 16px;
+    font-size: 0.95rem;
+    font-weight: 500;
+    margin: 16px 0 18px;
+    width: fit-content;
+    border-radius: 50px;
+    background: #dde4ff;
+  }
 
-    .card-list .card-link .card-title {
-        font-size: 1.19rem;
-        color: #000;
-        font-weight: 600;
-    }
+  .card-list .card-link .card-title {
+    font-size: 1.19rem;
+    color: #000;
+    font-weight: 600;
+  }
 
-    .card-list .card-link .card-button {
-        height: 35px;
-        width: 35px;
-        border-radius: 50%;
-        border: 2px solid #5372f0;
-        color: #5372F0;
-        margin: 30px 0 5px;
-        background: none;
-        cursor: pointer;
-        transition: 0.4s ease;
-    }
+  .card-list .card-link .card-button {
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    border: 2px solid #5372f0;
+    color: #5372f0;
+    margin: 30px 0 5px;
+    background: none;
+    cursor: pointer;
+    transition: 0.4s ease;
+  }
 
-    .card-list .card-link:hover .card-button {
-        color: #fff;
-        background: #5372f0;
+  .card-list .card-link:hover .card-button {
+    color: #fff;
+    background: #5372f0;
+  }
 
-    }
+  .swiper-button-prev {
+    margin-left: 50px;
+  }
 
-    .swiper-button-prev {
-        margin-left: 50px;
-    }
-
-    .swiper-button-next {
-        margin-right: 50px;
-    }
-    
+  .swiper-button-next {
+    margin-right: 50px;
+  }
 </style>
 
 <script>
-    import Swiper from "swiper/bundle";
-    import 'swiper/css/bundle';
+  import Swiper from "swiper/bundle";
+  import "swiper/css/bundle";
 
-    new Swiper('.card-wrapper', {
-        // Optional parameters
-        loop: true,
-        spaceBetween: 405,
+  new Swiper(".card-wrapper", {
+    // Optional parameters
+    loop: true,
+    spaceBetween: 405,
 
-        // Pagination
-        pagination: {
-            el: '.swiper-pagination',
-            clickable: true
-        },
+    // Pagination
+    pagination: {
+      el: ".swiper-pagination",
+      clickable: true,
+    },
 
-        // Navigation arrows
-        navigation: {
-            nextEl: '.swiper-button-next',
-            prevEl: '.swiper-button-prev',
-        },
-        breakpoints: {
-            0: {
-              slidesPerView: 1  
-            },
-            768: {
-              slidesPerView: 2  
-            },
-            1024: {
-              slidesPerView: 3  
-            },
-            1500: {
-              slidesPerView: 4  
-            },
-            2000: {
-              slidesPerView: 5  
-            }
-        }
-    });
+    // Navigation arrows
+    navigation: {
+      nextEl: ".swiper-button-next",
+      prevEl: ".swiper-button-prev",
+    },
+    breakpoints: {
+      0: {
+        slidesPerView: 1,
+      },
+      768: {
+        slidesPerView: 2,
+      },
+      1024: {
+        slidesPerView: 3,
+      },
+      1500: {
+        slidesPerView: 4,
+      },
+      2000: {
+        slidesPerView: 5,
+      },
+    },
+  });
 </script>
-
-
-    
