--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import '../styles/font.css';
+import "../styles/font.css";
 
 interface Props {
   title: string;
@@ -27,5 +27,4 @@ const { title } = Astro.props;
     margin: 0;
     font-family: "Chesna Grotesk", sans-serif;
   }
-
 </style>
