Temporarily Parking Dashboard at the NavBar

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -7,6 +7,9 @@ const { backgroundColor } = Astro.props;
     <a href="/" style="font-weight: 900; font-size: 48px;">V</a>
     <div class="navbar-contents">
       <div class="navbar-item">
+        <a href="/participant-dashboard">Dashboard</a>
+      </div>
+      <div class="navbar-item">
         <a href="/timeline">Timeline</a>
       </div>
       <div class="navbar-item">
