--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -20,7 +20,7 @@ const { items } = Astro.props;
   .faq {
     display: flex;
     flex-direction: column;
-    width: 800px;
+    max-width: 800px;
     padding: 20px;
   }
 
