--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,20 +165,38 @@ const showCaseStudies = currentDate < targetDate;
   .title-content-left {
     display: flex;
     position: absolute;
-    top: 75vh;
+    top: 600px;
     left: 25vh;
     font-weight: 900;
     font-size: 48px;
     width: 300px;
+    text-align: center;
   }
+
   .title-content-right {
     display: flex;
     position: absolute;
     text-align: center;
-    top: 75vh;
+    top: 600px;
     right: 25vh;
     width: 300px;
   }
+  @media only screen and (max-width: 1100px) {
+  .title-content-left {
+    top: 500px;width: 100vw;
+    left:0;
+    justify-content: center;
+  }
+
+    .title-content-right {
+    top: 600px;width: 100vw;
+    left:0;
+    justify-content: center;
+  }
+  .title-content-right p{
+    width:300px;
+  }
+}
   /* abouts */
 
   .about {
@@ -188,6 +206,7 @@ const showCaseStudies = currentDate < targetDate;
     padding-top: 50px;
     padding-bottom: 50px;
   }
+
   .about-paragraph {
     text-align: center;
     max-width: 1000px;
